Bug 1274158 part 1 - Handle zero perspective gracefully. r=mattwoodrow

MozReview-Commit-ID: CEX39wo6oX8